--- a/style.css
+++ b/style.css
@@ -7,15 +7,16 @@
     font-family: 'Libre Baskerville', serif;
     justify-content: center;
     max-width: 100%;
-    margin: 8%; /* Center the div horizontally */
+    margin: 8%;
   }
   img {
     border: 3px solid white;
     width: 100%;
-    max-width: 400px; /* Optional: limit the maximum width of the image */
+    max-width: 400px; 
   }
   h2 {
     text-transform: uppercase;
     justify-content: center;
     width: 100%;
+
   }
